--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Sails Gulp",
   "keywords": [],
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "bower": "~1.7.9",
     "ejs": "2.5.3",
     "gulp": "^3.9.1",
@@ -33,6 +34,9 @@
     "jshint": "^2.9.1",
     "lodash": "^4.13.1",
     "node-sass": "~3.8.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "q": "^1.4.1",
     "rc": "~1.0.1",
     "reflect-metadata": "0.1.2",
@@ -42,9 +46,9 @@
     "sails-disk": "~0.10.9",
     "sails-hook-email": "^0.12.1",
     "sails-mongo": "^0.12.0",
+    "snyk": "^1.21.2",
     "thirty-two": "^1.0.1",
-    "zone.js": "~0.6.12",
-    "snyk": "^1.21.2"
+    "zone.js": "~0.6.12"
   },
   "scripts": {
     "debug": "node debug app.js",
