--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "description": "Sails Gulp",
   "keywords": [],
   "dependencies": {
+    "async": "^2.1.4",
     "bcrypt": "^0.8.7",
     "bower": "~1.7.9",
     "ejs": "2.5.3",
+    "escape-html": "^1.0.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.2",
