--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "jquery": "~2.2.4",
     "bootstrap": "^4.0.0",
     "angular-ui-notification": "^0.2.0",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "ng-dialog": "ngDialog#^0.6.4"
   }
 }
